--- a/ACA_VAE_Gayane_Ghazaryan.ipynb
+++ b/ACA_VAE_Gayane_Ghazaryan.ipynb
@@ -1058,7 +1058,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##I don't understand where the error comes from."
+        "#I don't understand where the error comes from."
       ],
       "metadata": {
         "id": "-h8BZ4LFHmdY"
